--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@stencil/core": "~0.15.1",
-    "@stencil/router": "~0.3.0"
+    "@stencil/router": "~0.3.0",
+    "@types/jest": "^23.3.9"
   },
   "repository": {
     "type": "git",
